generated_services/indo_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '11'
  labels:
    app: indo
    workload.user.cattle.io/workloadselector: apps.deployment-dev-indoma
  name: indoma
  namespace: dev
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-dev-indoma
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: '2025-03-20T13:19:11+07:00'
      labels:
        workload.user.cattle.io/workloadselector: apps.deployment-dev-indoma
    spec:
      affinity: {}
      containers:
      - env:
        - name: allowed_domain
          value: indoma.solutiontech.id
        image: ppdptelkom/ppddev:latest
        imagePullPolicy: Always
        name: container-0
        ports:
        - containerPort: 80
          name: feppd
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: ppdptelkom
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes: []
