generated_services/indo_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: indo
    workload.user.cattle.io/workloadselector: apps.deployment-dev-indoma
  name: indo-service
  namespace: dev
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: indo
